--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -181,9 +181,7 @@
 .nav-actions {
   gap: 0 !important;
 }
-.logo-text{
-  font-size: 1rem !important;
-}
+
 .logo-icon{
   padding-top: 0.8rem;
 }
@@ -231,7 +229,7 @@
   font-size: 0.6rem;
 }
 .logo-text{
-  font-size: 1.1rem;
+  font-size: 1.5rem;
 }
 .theme-icon,
 .theme-toggle svg,
